2011-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: libpng sources were updated to release 1.5.4.

2011-10-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): TIFFGetField() on
	TIFFTAG_OPIIMAGEID was causing a crash due to an argument
	mis-match between GraphicsMagick and libtiff.  Also fixed a few
	GCC 4.6 warnings.  Problem was reported by Dylan Millikin.

2011-10-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickSetDepth): New function to set the
	depth used when reading from an image format which requires that
	the depth be specified in advance.
	(MagickReadImageBlob): Use BlobToImage() to read the blob.

	* magick/effect.c (AdaptiveThresholdImage): Reduce or eliminate
	expensive floating point calculations when possible.

	* wand/magick_wand.c (MagickSetFormat): New Wand function to allow
	setting the file or blob format before it has been read.

2011-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/installer/inc/tasks-install-perlmagick.isx: Windows
	setup installer now installs PerlMagick built against ActiveState
	Perl v5.12.4 build 1205.

	* magick/annotate.c (RenderFreetype): Eliminate spurious "out of
	memory" exceptions due to empty text string.

2011-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module.c (ModuleAliases): PAM format is handled by PNM
	coder.

	* jpeg: Record that jpeg sources were updated to release v8c.

	* lcms: Record that lcms sources were updated to release 2.2.

	* png: Record that png sources were updated to release 1.5.4.

	* tiff: Record that tiff sources were updated to release 4.0.0beta7.

	* xml: Record that libxml2 sources were updated to release 2.7.8.

	* zlib: Record that zlib sources were updated to release 1.2.5.

	* VisualMagick/installer/inc/body.isx: Set MagickConfigDirectory
	for DLL build so that .mgk files are put in application top