@@ -39,6 +39,12 @@
 <p>2011-10-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>wand/pixel_wand.c (NewPixelWand): Invoke InitializeMagick()
+automatically in case user forgets to do so.</li>
+<li>wand/drawing_wand.c (NewDrawingWand): Invoke InitializeMagick()
+automatically in case user forgets to do so.</li>
+<li>wand/magick_wand.c (NewMagickWand): Invoke InitializeMagick()
+automatically in case user forgets to do so.</li>
 <li>png: libpng sources were updated to release 1.5.4.</li>
 </ul>
 </blockquote>
